tests/should_fail/syntax_let_annotate_void.nv
module syntax_let_annotation_void

import super.std.core

// Cannot annotate a let as Void
fn noop() {}
let x: Void = noop()
